fixing spacing on collectiosn

--- a/brucepeel/css/isotope.css
+++ b/brucepeel/css/isotope.css
@@ -92,8 +92,6 @@ width: 336px;
 	width:160px;
 	height:564px;
 }
-
-
 .collection * {
   margin: 0;
 }
@@ -138,7 +136,6 @@ border-bottom:6px solid #e5e6e6;
 	left:5px;
 	padding:5px 10px;
 	display:none;
-	margin-top:50px;
 	color:#000;
 	font-family:sans-serif;
 	font-size:14px;
@@ -149,10 +146,10 @@ border-bottom:6px solid #e5e6e6;
 .collection.wide div.details{
 	width:300px;
 }
-
 .collection div.details p{
 	margin-right:5px;
 	margin-bottom:10px;
+
 }
 .collection div.details p.info{
 	font-style:italic;
