--- a/brucepeel/css/willing.css
+++ b/brucepeel/css/willing.css
@@ -24,6 +24,7 @@ ul{
 	height:100%;
 	width:69%;
 	min-width:500px;
+	z-index: 0;
 }
 #right{
 width: 30%;
@@ -33,86 +34,120 @@ border-left: 1em solid #fff;
 position: absolute;
 top: 0;
 right: 0;
-	background-color:rgba(0, 0, 0, 0.7);
+background-color:#000;
+background-color:rgba(0, 0, 0, 0.7);
 bottom: 0;
 height: 100%;
-
+z-index: 100;
 }
-header{
+div#header{
 	width:100%;
-	min-height:150px;
+	height:150px;
+	background-color:#fff;
 	background-color:rgba(255, 255, 255, 0.94);
 	margin-top:40px;
-
 }
-body.coll header{
-	margin-top:-50px;
+body.coll div#header{
+	margin-top:-30px;
 }
-header img{
-	margin:45px 25px;
+div#header img{
+	margin:45px 0 45px 30px;
 	float:left;
 }
-header h2{
-	margin-top:64px;
+div#header h2{
+	margin-top:63px;
 	margin-right:30px;
 	float:right;
-	font-size:15px;
+	font-size:0.9em;
 	font-weight:normal;
-	line-height:24px;
 }
-header h2 a{
+div#header p{
+	margin-right:30px;
+	float:right;
+	font-size:0.9em;
+}
+div#header p a{
 	text-decoration:none;
-	font-size:0.85em;
 	color:#007e44;
 	float:right;
+	margin-top:3px;
 }
-header h2 a:hover{
+div#header p a:hover{
 	background-color:#FFF;
 	color:#26431c;
 }
-header em{
+div#header em{
 	display:none;
 }
-header span{
+div#header span{
 	float:right;
 	padding:0 4px;
+	margin-top:3px;
 }
 nav{
-	height: 46%;
+	width:188px;
+	margin:30px 0 0 110px;
+	float:left;
+}
+nav ul{
+	list-style:none;	
+}
+nav ul li a{
+	background-color:#fff;
+	background-color:rgba(255, 255, 255, 0.9);
+	color:#007e10;
+	text-align:center;	
+	padding:10px 5px;
+	display:block;
+	margin-bottom:2px;
+	font-size:0.95em;
+}
+nav ul li a.first{
+	margin-left:0;
+}
+nav ul li a:hover{
+	background-color:#fff;
+	color:#000;
+}
+#general-info{
+	height: 49%;
 	overflow: hidden;
 	position: relative;
 	width: 100%;
 	display: block;
 	color:#fff;
-	font-size:0.9em;
 	font-weight:300;
 }
-nav ul{
+#general-info ul{
 	padding:0 15%;
 	list-style:none;
 	padding-top:25px;
 
 }
-nav ul li{
+#general-info ul li{
 	margin:15px 0;
 }
-nav ul li h3{
+#general-info ul li h3{
 	background-color:#000;
 	background-color:rgba(0, 0, 0, 0.5);
 	padding:3px 5px;
 	margin-bottom:3px;
 }
-nav ul li h3 a{
+#general-info ul li h3 a{
 color:#fff4c1;
-font-size:0.85em;
+font-size:0.75em;
 float:right;
 	}
-nav ul li a:hover{
+#general-info ul li p a{
+	color:#fff4c1;
+		}
+#general-info ul li a:hover{
 		color:#fff;
 		border-color:#fff;
 	}
-nav ul li p{
+#general-info ul li p{
 	padding-left:5px;
+	font-size:0.75em;
 	}
 #news{
 	width:100%;
@@ -121,11 +156,12 @@ nav ul li p{
 	color:#fff;
 	font-size:14px;
 	border-top: 1em solid white;
+	overflow:hidden;
 }
 #news h2{
 	padding:0 15%;
 	display:block;
-	font-size:18px;
+	font-size:1.2em;
 	font-weight:normal;
 	letter-spacing:1px;
 	padding-top:50px;
@@ -133,17 +169,17 @@ nav ul li p{
 .newsstory{
 		padding:3% 15%;
 }
-.newsstory h3, nav h3{
-	font-size:15px;
+.newsstory h3, #general-info h3{
+	font-size:1em;
 	color:#ffeb98;
 	font-weight:normal;
 }
 .newsstory p.news-info{
 	font-style:italic;
-	font-size:0.8em;
+	font-size:0.7em;
 }
 .newsstory p{
-	font-size:0.9em;
+	font-size:0.8em;
 }
 .newsstory p img{
 	border:solid 4px #fff;
@@ -159,17 +195,4 @@ a.explore{
 a.explore:hover{
 	color:#deebe5;
 }
-a.discover{
-	width:85%;
-	display:block;
-	padding:2% 0;
-	padding-left:15%;
-	font-size:1em;
-	font-weight:600;
-	background-color:#007e44;
-	color:#fff;
-}
-a.discover:hover{
-	background-color:#007e10;
-	color:#fff4c1;
-}
+
